# lerobot-isaac-dashboard

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml
docs/: API.md  EXAMPLES.md  INTERNALS.md
src/lerobot_isaac_dashboard/: __init__.py  app.py  cli.py  compare.py  report.py  snapshots.py
src/lerobot_isaac_dashboard/loaders/: __init__.py  _base.py  autoresearch.py  checkpoints.py  curriculum.py  eval_results.py  events.py  parquet_dataset.py  paths.py  synthetic.py  system_metrics.py  training_logs.py
src/lerobot_isaac_dashboard/runtime/: __init__.py  refresh.py  session_state.py  static_render.py
src/lerobot_isaac_dashboard/tabs/: __init__.py  _base.py  _compare.py  _kpis.py  autoresearch.py  curriculum.py  data_collection.py  evaluation.py  performance.py  pipeline_health.py  policy_training.py  synthetic.py  world_model.py
src/lerobot_isaac_dashboard/templates/: __init__.py  report.html.j2  tab.html.j2
tests/: conftest.py  test_app_smoke.py  test_compare.py  test_imports.py  test_report_auto_snapshot.py  test_report_export.py  test_snapshots.py
tests/loaders/: __init__.py  test_autoresearch.py  test_base.py  test_checkpoints.py  test_curriculum.py  test_eval_results.py  test_events.py  test_parquet_dataset.py  test_paths.py  test_synthetic.py  test_training_logs.py
tests/runtime/: test_refresh.py  test_session_state.py  test_static_render.py
tests/tabs/: __init__.py  test_kpis.py  test_render_smoke.py
