[project]
name = "lerobot-isaac-dashboard"
version = "0.1.0"
description = "Streamlit + Plotly metrics dashboard for the lerobot-isaac-training pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "plotly>=5.20",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
# Soft deps for richer metadata extraction; loaders degrade gracefully if absent.
lerobot = ["lerobot"]
worldmodel = ["stable-worldmodel"]
all = ["lerobot", "stable-worldmodel"]
monorepo = ["lerobot-isaac-meta", "lerobot-isaac-configs"]

[project.scripts]
lerobot-isaac-dashboard = "lerobot_isaac_dashboard.cli:main"
lerobot-isaac-report   = "lerobot_isaac_dashboard.report:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_isaac_dashboard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
