[project]
name = "lerobot-isaac-dashboard"
version = "0.1.0"
description = "Streamlit + Plotly metrics dashboard for the lerobot-isaac-training pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "streamlit-autorefresh>=1.0",
    "plotly>=5.20",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
# Soft deps for richer metadata extraction; loaders degrade gracefully if absent.
lerobot = ["lerobot"]
worldmodel = ["stable-worldmodel"]
all = ["lerobot", "stable-worldmodel"]
monorepo = ["lerobot-isaac-meta", "lerobot-isaac-configs"]

[project.scripts]
lerobot-isaac-dashboard  = "lerobot_isaac_dashboard.cli:main"
lerobot-isaac-report     = "lerobot_isaac_dashboard.report:cli_main"
lerobot-isaac-snapshot   = "lerobot_isaac_dashboard.snapshots:cli_main"
lerobot-isaac-compare    = "lerobot_isaac_dashboard.compare:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_isaac_dashboard"]

[tool.hatch.build.targets.wheel.shared-data]
# No shared data needed; templates are shipped as Python package data below.

[tool.hatch.build.targets.wheel.force-include]
# Ensure Jinja2 .j2 templates are included in the wheel.
# hatchling discovers non-Python files inside packages automatically when
# the `packages` key includes the package root, but we make it explicit here.
"src/lerobot_isaac_dashboard/templates" = "lerobot_isaac_dashboard/templates"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
